# rag

./: pyproject.toml  test_pipeline.py  text_chunking.py
data/output/search_results/: dataset_code_public.json  dataset_docs_public.json
data/output/search_results_and_answer/: dataset_docs_public.json
data/processed/: data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
src/: __main__.py  cli.py  evaluation.py  generation.py  indexing.py  models.py  retrieval.py
src/student/: __main__.py  chunking.py  cli.py  evaluation.py  generation.py  indexing.py  models.py  retrieval.py
src/student.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
