[project]
name = "student"
version = "0.1.0"
description = "RAG against the machine"
requires-python = ">=3.10"
dependencies = [
    "bm25s",
    "fire",
    "pydantic",
    "numpy",
    "tqdm",
    "transformers",
    "torch>=2.12.1",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "mypy",
    "pytest",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
